Commit#8 - Data pages are almost ready

--- a/TrafficGuard/TrafficGuard.csproj
+++ b/TrafficGuard/TrafficGuard.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\Location\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
