--- a/TrafficGuard/TrafficGuard.csproj
+++ b/TrafficGuard/TrafficGuard.csproj
@@ -23,4 +23,8 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\js\MapScript.js" />
+  </ItemGroup>
+
 </Project>
