Commit #15 - SQL on the Web

--- a/TrafficGuard/appsettings.json
+++ b/TrafficGuard/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TrafficGuard-2f1bb1cc-ff18-418d-8450-40265fd844cf;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "TrafficManagerAccidentDBConn": "Data Source=(localdb)\\MSSQLLocalDB;Database=TrafficManagerAccidentDB; Trusted_Connection=True;"
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-TrafficGuard-2f1bb1cc-ff18-418d-8450-40265fd844cf;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"TrafficManagerAccidentDBConn": "Data Source=(localdb)\\MSSQLLocalDB;Database=TrafficManagerAccidentDB; Trusted_Connection=True;"
+    "IdentityDBConn": "Server=sql.bsite.net\\MSSQL2016;Database=nsgshsk_IdentityDB;User Id=nsgshsk_IdentityDB;Password=NiNjA12345;MultipleActiveResultSets=true",
+    "TrafficGuardAccidentDBConn": "Server=sql.bsite.net\\MSSQL2016;Database=nsgshsk_TrafficGuardAccidentDB;User Id=nsgshsk_TrafficGuardAccidentDB;Password=NiNjA12345;"
   },
   "Logging": {
     "LogLevel": {
